# langchain-examples

./: .gitignore  app.py  main.py  pyproject.toml  sample-text-only-pdf-a4-size.pdf:Zone.Identifier  utils.py
.opencode/plans/: CODE_AGENT.md
chroma_db/: chroma.sqlite3
chroma_index/: chroma.sqlite3
pdf_summarizer/: app.py  test.py
ticket_predictor/: main.py
travel_itinerary/: .env.example  AGENTS.md  PLAN.md  app.py  problem.txt  requirements.txt
travel_itinerary/chains/: extractor.py  merge.py  summary.py
travel_itinerary/data/: generate_synthetic.py
travel_itinerary/data/sample_itineraries/: itinerary_01.csv  itinerary_01.json  itinerary_02.json  itinerary_03.json  itinerary_04.json  itinerary_05.json  itinerary_06.json  itinerary_07.json  itinerary_08.json  itinerary_09.json  itinerary_10.json  itinerary_11.json  itinerary_12.json  itinerary_13.json  itinerary_14.json  itinerary_15.json  itinerary_16.json  itinerary_17.json  itinerary_18.json  itinerary_19.json  itinerary_20.json  itinerary_21.json  itinerary_22.json  itinerary_23.json
travel_itinerary/llm/: get_llm.py
travel_itinerary/models/: itinerary.py
travel_itinerary/utils/: data_loader.py
