[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.14",
    "langchain-openrouter>=0.2.1",
    "langchain-text-splitters>=1.1.2",
    "pdfminer-six>=20260107",
    "pypdf>=6.10.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "torchvision>=0.26.0",
]
